# alarm-clock

./: .gitignore  AI_WORKFLOW.md  DECISIONS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alarm_clock/: __init__.py  cli.py  logging_config.py  models.py  notifier.py  parser.py  scheduler.py  storage.py
docs/: ARCHITECTURE.md  REQUIREMENTS.md
tests/: conftest.py  test_cli.py  test_models.py  test_notifier.py  test_parser.py  test_scheduler.py  test_storage.py
